# bobzilla

./: AGENTS.md  CHANGELOG.md  DEPLOY.md  HANDOFF.md  IDEAS.md  MEMORY.md  README.md  ROADMAP.md  SUBMODULE_INVENTORY.md  TODO.md  VISION.md  mozconfig.bobzilla
docs/: BUILD.md  RESEARCH.md
docs/architecture/: build-optimizations.md  javasandbox-architecture.md  v8-spider-integration.md
guest-os/: README.md  build.sh  buildroot-config
guest-os/rootfs-overlay/etc/: inittab
guest-os/rootfs-overlay/etc/init.d/: S99javainit
patches/: README.md  javasandbox-hw-isolation.patch  javasandbox-ipc-client.patch  javasandbox-uri-handler.patch
patches/drm/: widevine-l1.patch
patches/javasandbox/: javasandbox-uri-handler-functional.patch
patches/performance/: oom-tuning.patch  webgpu-passthrough.patch
patches/privacy/: disable-safebrowsing.patch  native-adblock.patch  remove-captive-portal.patch  remove-newtab-telemetry.patch  remove-pocket.patch  remove-sponsored.patch  remove-sync.patch  remove-telemetry.patch
patches/ui/: about-support.patch  bobzilla-dashboard-ui.patch  compact-urlbar.patch  custom-layout.patch  custom-scaling.patch  javasandbox-wayland-bridge.patch  tracking-protection-ui.patch  vertical-tabs.patch
policies/: policies.json
runner-daemon/: Cargo.toml
runner-daemon/src/: disk_streamer.rs  fuse_bridge.rs  main.rs  microvm.rs  snapshot_manager.rs
scripts/: apply-patches.sh  build.sh  fetch-source.sh  validate-patches.sh
settings/: bobzilla.cfg  user.js
